cfx-ui: fix readability issue on filter buttons

--- a/ext/cfx-ui/src/app/servers/components/server-filter.component.scss
+++ b/ext/cfx-ui/src/app/servers/components/server-filter.component.scss
@@ -148,7 +148,7 @@ a {
 					width: 100%;
 
 					font-size: $fontSize*.8;
-					font-weight: 100;
+					font-weight: 350;
 					line-height: 1;
 
 					@include theme using ($theme) {
